FIXED BUG WITH GAP IN SHOWOFF

--- a/style/style.css
+++ b/style/style.css
@@ -140,7 +140,7 @@ canvas {
   padding: 3%;
   max-width: 42.5%;
   min-width: 400px;
-  gap: 3%;
+  gap: 1.5vh;
 }
 .image-container {
   cursor: default;
@@ -148,11 +148,6 @@ canvas {
 }
 
 .project-image {
-  width: 100%;
-  border-radius: 10px;
-}
-
-.project > a > video {
   width: 100%;
   border-radius: 10px;
 }
